--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mini-css-extract-plugin": "^2.9.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
